fix dropdown contrast

--- a/chrome/userChrome.css
+++ b/chrome/userChrome.css
@@ -36,7 +36,6 @@ tree,
     font-weight: 600;
     font-style: normal !important;
     -moz-appearance: none !important;
-    color: #98cfe5 !important;
 }
 
 menupopup {
